Stop image repeating on mobile screens

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -10,6 +10,7 @@ body {
   color: #606c71; 
   background-image: url("/img/crystals.jpeg");
   background-size:100%;
+  background-repeat: no-repeat;
   padding-top: 10%;
   }
 
